Fix icons not blurring

--- a/src/assets/css/nav.css
+++ b/src/assets/css/nav.css
@@ -7,6 +7,7 @@ header {
 	gap: 0;
 
 	width: 100vw;
+	z-index: 10;
 }
 
 /* Language selection menu */
